--- a/src/main/webapp/resources/sample/css/mobile.css
+++ b/src/main/webapp/resources/sample/css/mobile.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 /* 모바일용 스타일지정 시작  */
+body {font-size:14px;}/*부트스트랩css영향을 받은 것을 무효화시키고, 사용자css로 적용*/
 /* 헤더영역 시작 */
 .header {
 height:80px;
@@ -62,6 +63,7 @@ color:#fff;
 /* 헤더영역 끝 */
 /* 본문섹션 슬라이드영역 시작 */
 #wrap .slider img {width:100%;}/* Cascade Style Sheet 특징 계단형 스타일지정 */
+.carousel-item, .carousel-item img {height:300px;}
 /* 본분섹션 슬라이드영역 끝 */
 /* 푸터영역 시작 */
 .footer {
@@ -191,4 +193,53 @@ line-height:1,6;/*줄간격단위는 현재 글자크기의 배수*/
 /*reset.css에서 hr태그를 display:nene;적용했기 때문에 특별히 .blog영역에서만 hr적용*/
 .blog-section hr {display:block; height:1px; color:#3f51b5;}
 /*blog영역 끝*/
+/* CONTACT 영역 시작*/
+.contact-section {
+margin-top:30px;
+}
+.contact-section h1 {
+text-align:center;
+font-size:42px;
+color:#3f51b5;
+font-weight:normal;
+}
+.contact-section .container {
+width:90%;
+margin:0px auto;/*가운데정렬*/
+margin-top:30px;
+}
+.contact-section label {
+display:none;/*모바일에서는 숨기지만, 태블릿+pc용에서는 보이게 처리예정*/
+}
+.contact-section form input {
+width:100%;
+line-height:1.2;
+padding:0 2px;
+height:40px;
+border:none;
+border-bottom:2px solid #ccc;/* 테두리 선설정: 2px(굵기) solid(실선),dotted(점선), 선색상*/
+background:transparent; /*배경색상 투명처리*/
+}
+.contact-section form textarea {
+width:100%;
+background:transparent;
+line-height:1.2;
+border:none;
+border-bottom:2px solid #ccc;
+min-height:100px;/*최소높이를 지정하는 이유는 내용이 없더라도, 높이를 100px로 지정하는 의미*/
+padding-top:10px;
+padding-bottom:10px;
+}
+.contact-section form button {
+padding:15px;/*여백이 있는 버튼을 만들기*/
+font-size:12px;
+background:#3f51b5;
+color:#fff;
+border:0px;
+}
+.submit-btn {
+margin-top:10px;
+text-align:right;/*div영역 안 쪽의 내용을 좌우 정렬시키는 명령어*/
+}
+/* CONTACT 영역 끝 */
 /* 모바일용 스타일지정 끝 */
