--- a/src/main/webapp/resources/sample/css/pc.css
+++ b/src/main/webapp/resources/sample/css/pc.css
@@ -58,5 +58,23 @@ float:right;/*li리스트태그에 적용했던 방식이라면 모두 float:lef
 width:80%;
 }
 /*blog영역 끝*/
+/*PC 스타일 시작*/
+@media all and (min-width:1132px) {
+.contact-section {
+margin-left:3%;
+margin-right:3%;
+}
+.contact-section h1 {
+float:left;
+margin-top:30px;
+}
+.contact-section .container {
+float:right;
+width:75%;
+}
+.contact-section form input {height:50px;}
+.contact-section form textarea {min-height:150px;}
+}
+/*PC 스타일 끝*/
 }
 /*PC용 스타일끝*/
