--- a/src/main/webapp/resources/sample/css/tablet.css
+++ b/src/main/webapp/resources/sample/css/tablet.css
@@ -61,6 +61,9 @@ border:  1px solid gold;
 height:200px;
 overflow:hidden;
 }
+.blog-section info2 {
+	padding:10px;	
+}
 .blog-section li:first-child {
 margin-left:0px;
 }
