--- a/src/main/webapp/resources/sample/css/tablet.css
+++ b/src/main/webapp/resources/sample/css/tablet.css
@@ -46,7 +46,10 @@ margin-left:0px;
 /*work영역 시작*/
 .work-section li {
 float:left;/*세로배치를 가로배치로 변경*/
-width:50%;}
+width:50%;
+max-height:300px;/*높이가 들쑥날쑥하면 이빨빠지는 부분이 생겨서 이미지 보이는 공간의
+최고 높이를 300px로 고정*/
+overflow:hidden;/*만약에 300px이 넘는 이미지는 숨겨지게 됩니다.*/}
 /*work영역 끝*/
 
 /*blog 영역 시작*/
