헤로쿠 업로드 준비

--- a/src/main/webapp/resources/home/css/board.css
+++ b/src/main/webapp/resources/home/css/board.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 /* 공통영역 */
-#bbslistTbl a: hover {color:#000 !important;} /*a태그의 가상선택자로 hover마우스 오버시 색상 검은색으로 변경
+#bbslistTbl a:hover, .pagination a:hover, .bbs_title a:hover {
+	color:#000 !important;} /*a태그의 가상선택자로 hover마우스 오버시 색상 검은색으로 변경
 /* 메인상단 위치표시영역 */
 .location_area {
 	height: 260px;
@@ -373,3 +374,17 @@ input:-ms-input-placeholder {
 /* //태블릿+PC용 게시판뷰 */
 }
 /* //게시판 글보기 영역 */
+
+/* 	기본 css: 모바일 */
+.btn_smallColor {
+	height: 35px;
+	line-height: 35px;
+	font-size: 14px;
+	margin-bottom: 5px;
+	margin-top: 0px;
+	font-weight: normal;
+}
+/* 미디어쿼리: 테블릿기기 이상에서 적용되는 css(아래) */
+@media all and (min-width: 801px) {
+	.btn_smallColor{width:70px;margin-top:10px;}
+}
