--- a/src/main/webapp/resources/home/css/main.css
+++ b/src/main/webapp/resources/home/css/main.css
@@ -10,10 +10,10 @@ body {
 	line-height: 1 !important;
 }
 dl, ol, ul { margin-bottom:0 !important;}
-
+#container a:hover {color: #000 !important;}
 /* : 가상선택자, :: 가상요소 */
 a:link {color: #444;}
-a:hover {color: #fff;}
+a:hover {color: #fff !important;}
 a:visited {color: #444;}
 a {text-decoration: none;}
 img {border: none;}
